# DeepCAD

./: Dockerfile  README.md  pyproject.toml  requirements.txt
utils/: export2step.py
